# mbdyn

./: .gitignore  .gitmodules  AUTHORS  BUGS  CHANGES  CONTRIBUTING.md  LICENSE  Makefile.am  README  README.md  TODO  acinclude.m4  bootstrap.sh  configure.ac  copyright.sh  testauth.txt
contrib/n2m/: Makefile.am  configure.ac  conm2.c  cord2r.c  grid.c  lib.c  n2m.c  n2m.h  pbeam.c
include/: Makefile.am  mbdefs.h.in
include/ac/: arpack.h  jdqz.h  lapack.h  qrupdate.h  spinlock.h  sys_sysinfo.h  unistd.h
libraries/libann/: ActivationFunction.c  ActivationFunction.h  Makefile.am  ann.c  ann.h  matrix.h
libraries/libcolamd/: Makefile.am  colamd.h
libraries/libmbc/: Makefile.am  mbc.c  mbc.h  mbc_dummy.c  mbc_py.cc  mbc_py.h  mbc_py_global.h  mbc_py_global.i  mbc_py_interface.py  mbcxx.cc  mbcxx.h  mbcxxshared.cc  mbcxxshared.h  sharedmem.h  sock.c  sock.h
libraries/libmbmath/: MLS.h  Makefile.am  Rot.cc  Rot.hh  RotCoeff.hc  Rot_basic.h  bisec.cc  ccmh.cc  ccmh.h  cscmhtpl.h  dgeequ.cc  dgeequ.h  dgeequtest.cc  dirccmh.cc  dirccmh.h  epetraspmh.cc  epetraspmh.h  epetravh.cc  epetravh.h  fullmh.cc  fullmh.h  geomdata.h  gradient.h  gradienttest.cc  interp.cc  interp.h  itertest  itertest.cc  ldl.f  ldl.h  ldl_.c  ls.cc  ls.h  matmultest  matmultest.cc  matvec.h  matvec3.cc  matvec3.h  matvec3n.cc  matvec3n.h  (+51 more)
libraries/libmbwrap/: Makefile.am  arptest.cc  aztecoowrap.cc  aztecoowrap.h  cctest  cctest.cc  chacowrap.cc  harwout.c  harwout.h  harwout_.cc  kluwrap.cc  kluwrap.h  linsol.cc  linsol.h  metiswrap.cc  metiswrap.h  mschwrap.cc  mschwrap.h  naivewrap.cc  naivewrap.h  pardisowrap.cc  pardisowrap.h  parnaivewrap.cc  parnaivewrap.h  parsuperluwrap.cc  parsuperluwrap.h  pastixwrap.cc  pastixwrap.h  qrwrap.cc  qrwrap.h  siconoswrap.cc  siconoswrap.h  strumpackwrap.cc  strumpackwrap.h  superluwrap.cc  taucswrap.cc  taucswrap.h  umfpackwrap.cc  umfpackwrap.h  wraptest.cc  (+4 more)
libraries/libnaive/: Makefile.am  mthrdslv.c  mthrdslv.h  pmthrdslv.c  pmthrdslv.h
libraries/libobjs/: Makefile.am
mbdyn/: AUTHORS  BUGS  CHANGELOG  CHANGES  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  TODO  acconfig.h  acinclude.m4  aclocal.m4  bootstrap.sh  build.sh  check_cvs.sh  configure  configure.ac  copyright.sh  cppcheck.sh  fix-makefile.sh  ginac_mbdyn_abs.cc  mbdyn.REMOVED.git-id  mbdyn.cc  mbdyn.h
mbdyn/aero/: Makefile.am  aerod.f  aerod2.f  aerod2.h  aerodata.cc  aerodata.h  aerodata_impl.cc  aerodata_impl.h  aerodc81.c  aerodc81.h  aerodyn.cc  aerodyn.h  aerodyn_.h  aeroelem.cc  aeroelem.h  aeroext.cc  aeroext.h  aeromodal.cc  aeromodal.h  c81data.cc  c81data.h  c81data.txt  genfm.cc  genfm.h  gust.cc  gust.h  indvel.cc  indvel.h  instruments.cc  instruments.h  rotor.cc  rotor.h  windprof.h
mbdyn/base/: Makefile.am  ScalarFunctionsImpl.cc  ScalarFunctionsImpl.h  TimeStepControl.cc  TimeStepControl.h  auth.cc  bicg.cc  bicg.h  binary_output_file.cc  binary_output_file.h  binaryoutput.h  bufferstream_out_elem.cc  bufferstream_out_elem.h  bufferstreamdrive.cc  bufferstreamdrive.h  constltp.h  constltp_dcw.h  constltp_impl.cc  constltp_impl.h  constltp_nlp.cc  constltp_nlsf.cc  constltp_nlsf.h  contactj.h  converged.h  dataman.cc  dataman.h  dataman2.cc  dataman3.cc  dataman4.cc  dataman6.cc  dataman_.h  datamanforward.h  ddrive.h  dofdrive.cc  dofman.cc  dofown.cc  dofown.h  dofpgin.cc  drive.cc  drive.h  (+154 more)
mbdyn/elec/: Makefile.am  accelerometer.cc  accelerometer.h  discctrl.cc  discctrl.h  displacement.cc  displacement.h  elec.cc  elec.h  elecnode.cc  elecnode.h  elecnodead.cc  elecnodead.h  forgfact.cc  forgfact.h  genel.cc  genel_.cc  genel_.h  genfilt.cc  genfilt.h  gpc.cc  gpc.h  id.h  motor.cc  motor.h  px.h  rottrim.cc  rottrim.h  swashpl.cc  swashpl.h
mbdyn/etc/: Makefile.am  Makefile.in  rcsite
mbdyn/hydr/: Makefile.am  actuator.cc  actuator.h  hfluid.cc  hfluid_.h  hminor.cc  hminor.h  hutils.cc  hutils.h  pipe.cc  pipe.h  preselem.cc  presnode.cc  presnode.h  presnodead.cc  presnodead.h  valve.cc  valve.h
mbdyn/include/: Makefile.am  Makefile.in  mbconfig.h.in  mbdefs.h.in  sstream.h
mbdyn/libraries/: Makefile.am  Makefile.in
mbdyn/manual/: Doxyfile  MBDynHeader.html  Makefile.am  Makefile.in  Makefile.ok  femgen.1.in  hydr-in.txt  input.bib  make.sh  mbdyn-output.1  mbdyn.1  mbdyn.1.in  mbdyn.bib  modal.tex  mybib.bib  parallel.txt  scalarfilter.tex  stdmacro.tex  tecman.bib  vehj.tex
mbdyn/mbdyn/: Makefile.am  Makefile.in  dummy_c.c  dummy_f.f  mbdyn.cc  mbdyn.h
mbdyn/modules/: Makefile.am  Makefile.in  Makefile.module  Makefile.template  README
mbdyn/struct/: Makefile.am  accj.cc  accj.h  addedmass.cc  addedmass.h  autostr.cc  autostr.h  autostrad.cc  autostrad.h  beam.cc  beam.h  beam2.cc  beam2.h  beamad.cc  beamad.h  beamslider.cc  beamslider.h  body.cc  body.h  bodyad.cc  bodyad.h  brake.cc  brake.h  distance.cc  distance.h  drvdisp.cc  drvdisp.h  drvhinge.cc  drvhinge.h  drvj.cc  drvj.h  friction.cc  friction.h  genj.cc  genj.h  gimbal.cc  gimbal.h  hbeam.cc  hbeam.h  hbeam_interp.cc  (+87 more)
mbdyn/thermo/: Makefile.am  therm.cc  therm.h  thermalcapacitance.cc  thermalcapacitance.h  thermalnode.cc  thermalnode.h  thermalnodead.cc  thermalnodead.h  thermalresistance.cc  thermalresistance.h  thermalsource.cc  thermalsource.h
mbdyn/utils/: 2vec2phi.cc  GPC.c  GPC.h  GPCdataExample.txt  Makefile.am  Makefile.in  Makefile.template  README.dae-intg  README.s2s  README_GPC  ann_in.c  ann_sf.c  ann_sim.c  ann_tr.c  any2rot.cc  autopilot.c  c81.cc  c81merge.cc  c81test.cc  cl.cc  crypt.c  dae-intg.cc  dae-intg.h  deriv.c  dummy.cc  duota.f  eig.c  env.c  eu2phi.cc  eu2rot.cc  femgen.c  femgen.f  femgen_f.f  intg.cc  intg.h  loadable.cc  logproc.c  matrix.c  (+46 more)
utils/: DSSdataExample.txt  GPC.c  GPC.h  Makefile.am  PKG_ADD  README.s2s  ann_in  ann_in.c  ann_sf  ann_sf.c  ann_sim  ann_sim.c  ann_tr  ann_tr.c  any2rot.cc  autopilot  autopilot.c  c81.cc  c81merge  c81merge.cc  c81test  c81test.cc  cl  cl.cc  crypt  crypt.c  crypt.cc  dae-intg  dae-intg.cc  dae-intg.h  deriv  deriv.c  dummy.cc  eig.c  env.c  eu2phi  eu2phi.cc  eu2rot  eu2rot.cc  femgen  (+66 more)
(+2115 files in other folders)
